# solar2d-plugin-yoga

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  release.yml
docs/: API.md
example/: benchmark.lua  build.settings  config.lua  gallery.lua  main.lua  test_all_apis.lua
include/: plugin_yoga.h
lua/plugin/: yoga.lua
src/: plugin_yoga.c  yoga_enums.c  yoga_node_layout.c  yoga_node_style.c
